11712702-project1/test/test_11712702_1.out
Error type A at Line 3 : Unknown lexeme 0xffg
Error type B at line 4 : Missing semicolon ';'