11712702-project1/test/test_11712702_1.spl
int test_11712702_1()
{
  int i = 0xffg, j = 1;
  return i

}